--- a/public/env-config.js.template
+++ b/public/env-config.js.template
@@ -4,5 +4,5 @@ window.env = {
   VITE_NYTIMES_BASE_URL: "$VITE_NYTIMES_BASE_URL",
   VITE_NEWSAPI_KEY: "$VITE_NEWSAPI_KEY",
   VITE_GUARDIAN_KEY: "$VITE_GUARDIAN_KEY",
-  VITE_NYTIMES_KEY: "$VITE_NYTIMES_KEY",
+  VITE_NYTIMES_KEY: "$VITE_NYTIMES_KEY"
 };
